# ansible-web

./: .ansible-lint  .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: test.yml
defaults/: main.yml
files/pettypiece.ca/conf/: pettypiece.ca
files/pettypiece.ca/html/: index.html
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/default/pebble/: pebble-config.json
molecule/default/tests/: test_certificates.py  test_cron.py  test_nginx.py  test_packages.py  test_services.py
tasks/: cert.yml  letsencrypt.yml  main.yml  nginx.yml  site.yml
templates/conf/: site-proxy.j2  site-static.j2
tests/: test.yml
vars/: main.yml
